--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -5,6 +5,7 @@
 	<title>Quienes Somos</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Somos una editorial que busca ampliar el universo de la literatura argentina de acción y de aventuras, a partir de una propuesta asociativa que coloca a los autores en pie de igualdad con los editores.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="icon" href="fotos/avatar.png">
@@ -14,7 +15,7 @@
 	<div class="container principal sticky-top mb-3">
 		<div class="navbar navbar-expand-lg">
 		  	<div class="container-fluid">
-		   		 <a class="navbar-brand" href="index.html"><img src="fotos/logoprueba.png" class="header__logo" alt="logo ediciones el panda" ></a>
+		   		 <a class="navbar-brand" href="index.html"><img src="fotos/edicioneselpanda.png" class="header__logo" alt="logo ediciones el panda" ></a>
 		   		 <button class="navbar-toggler navbar-dark header" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	              <span class="navbar-toggler-icon"></span>
 	            </button>
@@ -48,7 +49,7 @@
 		<div class="container principal p-3 mb-3">
 			<div class="row">
 				<div class="col-12 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
-					<h5 class="h-mod mb-3">Conocenos un poco más</h5>
+					<h1 class="titulos mb-3">Conocenos un poco más</h1>
 					<p>Ediciones El Panda nació de un tweet en plena pandemia. El inquieto y prolífico Juan Ruocco contaba que tenía en desarrollo una novela sobre robots y peronismo, y que buscaba editor para publicarla.</p> 
 		 			<p>Como esas cosas que surgen en charlas de amigos y grupos de whatsapp, alguien tiró la novedad, un par hicieron chistes y uno, Ariel, “El Panda”, recogió el guante: «¿cuánto sale editarlo?».</p>
 		 			<p>Lo que empezó como otras miles de ideas tiradas al aire fue tomando forma, tuvo avances y retrocesos, números que no cerraban y estimaciones poco realistas. Pero, de golpe, la pandemia se hizo carne y se llevó a quien dio la patada inicial de este proyecto. Luego del trance, la tristeza y aún sin poder abrazarnos, el proyecto editorial se hizo más fuerte, más necesario y concreto, y decidió llamarse, por supuesto, Ediciones El Panda.</p>
@@ -65,28 +66,28 @@
 	
 					<div class="container principal mb-3 pt-2 pb-2">
 						<div class="row mb-3">
-							<h2 class="d-flex justify-content-center h-mod">Reviví la presentación</h2>
+							<h1 class="d-flex justify-content-center titulos ">Reviví la presentación</h1>
 						</div> 
 						<div class="row"> 
 				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion1" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion1.jpg" alt="tapa del libro"></a>
+				    			<a href="#Presentacion1" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_libro.jpg" alt="tapa del libro"></a>
 				  			</div>
 				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion2" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion2.jpg" alt="grupo de gente"></a>
+				    			<a href="#Presentacion2" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editorial.jpg" alt="grupo de gente"></a>
 				  			</div>
 				  			<div class="col-12 col-lg-4 mb-3">
-				   			 	<a href="#Presentacion3" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion3.jpg" alt="recital Leon Rogani"></a>
+				   			 	<a href="#Presentacion3" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani"></a>
 				 			 </div>
 				 		</div>
 				 		<div class="row"> 
 				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion4" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion4.jpg" alt="Presentacion de la editorial"></a>
+				    			<a href="#Presentacion4" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editores.jpg" alt="Presentacion de la editorial"></a>
 				  			</div>
 				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion5" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion5.jpg" alt="charla del autor"></a>
+				    			<a href="#Presentacion5" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_autor.jpg" alt="charla del autor"></a>
 				  			</div>
 				  			<div class="col-12 col-lg-4 mb-3">
-				   			 	<a href="#Presentacion6" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion6.jpg" alt="autor firmando libros"></a>
+				   			 	<a href="#Presentacion6" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_firma.jpg" alt="autor firmando libros"></a>
 				 			 </div>
 				 		</div>
 					</div>
@@ -98,7 +99,7 @@
 	    <div id="Presentacion1" class="modal modal-zoom" tabindex="-1">
 	        <div class="modal-dialog">
 	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion1.jpg" alt="tapa del libro">	            
+	            	<img class="img-fluid" src="fotos/presentacion_libro.jpg" alt="tapa del libro">	            
 	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	            </div>
 	        </div>
@@ -106,7 +107,7 @@
 	    <div id="Presentacion2" class="modal modal-zoom" tabindex="-1">
 	        <div class="modal-dialog">
 	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion2.jpg" alt="grupo de gente">	            
+	            	<img class="img-fluid" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">	            
 	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	         	</div>
 	        </div>
@@ -114,7 +115,7 @@
     	<div id="Presentacion3" class="modal modal-zoom" tabindex="-1">
 	        <div class="modal-dialog">
 	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion3.jpg" alt="recital Leon Rogani">      
+	            	<img class="img-fluid" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">      
 	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	         	</div>
 	        </div>
@@ -122,7 +123,7 @@
     	<div id="Presentacion4" class="modal modal-zoom" tabindex="-1">
 	        <div class="modal-dialog">
 	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion4.jpg" alt="presentacion de la editorial">	            
+	            	<img class="img-fluid" src="fotos/presentacion_editores.jpg" alt="presentacion de la editorial">        
 	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	         	</div>
 	        </div>
@@ -130,7 +131,7 @@
     	<div id="Presentacion5" class="modal modal-zoom" tabindex="-1">
 	        <div class="modal-dialog">
 	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion5.jpg" alt="charla del autor">	            
+	            	<img class="img-fluid" src="fotos/presentacion_autor.jpg" alt="charla del autor">	            
 	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	         	</div>
 	        </div>
@@ -138,7 +139,7 @@
     	<div id="Presentacion6" class="modal modal-zoom" tabindex="-1">
 	        <div class="modal-dialog">
 	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion6.jpg" alt="autor firmando libros">	            
+	            	<img class="img-fluid" src="fotos/presentacion_firma.jpg" alt="autor firmando libros">	            
 	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	         	</div>
 	        </div>
