--- a/comprar.html
+++ b/comprar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ediciones El Panda - Comprar</title>
+	<title>Compra El Coloso</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 	<div class="container principal sticky-top mb-3">
 		<div class="navbar navbar-expand-lg">
 		  	<div class="container-fluid">
-		   		 <a class="navbar-brand" href="index.html"><img src="fotos/logoprueba.png" class="header__logo" alt="logo ediciones el panda" ></a>
+		   		 <a class="navbar-brand" href="index.html"><img src="fotos/edicioneselpanda.png" class="header__logo" alt="logo ediciones el panda" ></a>
 		   		 <button class="navbar-toggler navbar-dark header" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	              <span class="navbar-toggler-icon"></span>
 	            </button>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="col-12 col-xl-6 p-3 mb-3 d-flex flex-wrap align-content-center align-content-xl-start">
 				<div class="mb-2">
-					<h2 class="h-mod">Como Comprar este libro</h2>
+					<h1 class="titulos">Como Comprar este libro</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 
@@ -102,7 +102,7 @@
 	<!-- offcanvas dentro con envio-->
 						<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
 	  						<div class="offcanvas-header">
-	   					 		<h5 id="offcanvasRightLabel" class="titulos">Completa el formulario</h5>
+	   					 		<h2 id="offcanvasRightLabel" class="titulos">Completa el formulario</h2>
 	    					<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	  						</div>
 	  						<div class="offcanvas-body">
@@ -181,7 +181,7 @@
 	<!-- offcanvas dentro con retiro-->
 						<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight-retiro" aria-labelledby="offcanvasRightLabel">
 	  						<div class="offcanvas-header">
-	   					 		<h5 id="offcanvasRightLabel" class="titulos">Completa el formulario</h5>
+	   					 		<h2 id="offcanvasRightLabel" class="titulos">Completa el formulario</h2>
 	    					<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	  						</div>
 	  						<div class="offcanvas-body">
