--- a/convocatoria.html
+++ b/convocatoria.html
@@ -1,9 +1,10 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	<title>Ediciones El Panda - Convocatoria</title>
+	<title>Convocatoria a Nuevos Autores</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Estamos buscando nuevos autores para sumar a Ediciones El Panda.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="icon" href="fotos/avatar.png">
@@ -13,7 +14,7 @@
 	<div class="container principal sticky-top mb-3">
 		<div class="navbar navbar-expand-lg">
 		  	<div class="container-fluid">
-		   		 <a class="navbar-brand" href="index.html"><img src="fotos/logoprueba.png" class="header__logo" alt="logo ediciones el panda" ></a>
+		   		 <a class="navbar-brand" href="index.html"><img src="fotos/edicioneselpanda.png" class="header__logo" alt="logo ediciones el panda" ></a>
 		   		 <button class="navbar-toggler navbar-dark header" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	              <span class="navbar-toggler-icon"></span>
 	            </button>
@@ -45,7 +46,7 @@
 	<div class="container principal p-3 mb-3">
 		<div class="row">
 			<div class="col-12 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
-				<h5 class="h-mod mb-3">¡Estamos buscando nuevos autores!</h5>
+				<h1 class="titulos mb-3">¡Estamos buscando nuevos autores!</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
 			</div>
 		</div>
@@ -58,7 +59,7 @@
 		<div class="row">
 			<div class="col-12 col-md-6 mb-3 d-flex align-content-stretch">
 				<div class="container principal">
-					<div class="titulos mb-3 pt-3">Bases y Condiciones:</div>
+					<h2 class="titulos mb-3 pt-3">Bases y Condiciones:</h2>
 					<ul>
  					<li>
  						<div class="subtitulos">Articulo 1:</div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
