--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Ediciones El Panda</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Somos una editorial que diseña, produce y publica de forma conjunta con autores que están dando sus primeros pasos.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="icon" href="fotos/avatar.png">
@@ -14,7 +15,7 @@
 	<div class="container principal sticky-top mb-3">
 		<div class="navbar navbar-expand-lg">
 		  	<div class="container-fluid">
-		   		 <a class="navbar-brand" href="index.html"><img src="fotos/logoprueba.png" class="header__logo" alt="logo ediciones el panda" ></a>
+		   		 <a class="navbar-brand" href="index.html"><img src="fotos/edicioneselpanda.png" class="header__logo" alt="logo ediciones el panda" ></a>
 		   		 <button class="navbar-toggler navbar-dark header" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	              <span class="navbar-toggler-icon"></span>
 	            </button>
@@ -74,7 +75,7 @@
 		<div class="row">
 			<div class="col-12 col-md-6 mb-3 d-flex align-content-stretch">
 				<div class="container principal">
-					<div class="titulos mb-3 p-1 pt-3">Acerca de Nosotros</div>
+					<h1 class="titulos mb-3 p-1 pt-3">Acerca de Nosotros</h1>
 					<p>Somos una editorial que diseña, produce y publica de forma conjunta con autores que están dando sus primeros pasos.</p>
 					<div class="d-flex justify-content-center mb-2">
 						<img src="fotos/avatar.png" class="avatar" alt="avatar" >
