--- a/libros.html
+++ b/libros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ediciones El Panda - Libros</title>
+	<title>Libros - Ediciones El Panda</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 	<div class="container principal sticky-top mb-3">
 		<div class="navbar navbar-expand-lg">
 		  	<div class="container-fluid">
-		   		 <a class="navbar-brand" href="index.html"><img src="fotos/logoprueba.png" class="header__logo" alt="logo ediciones el panda" ></a>
+		   		 <a class="navbar-brand" href="index.html"><img src="fotos/edicioneselpanda.png" class="header__logo" alt="logo ediciones el panda" ></a>
 		   		 <button class="navbar-toggler navbar-dark header" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	              <span class="navbar-toggler-icon"></span>
 	            </button>
@@ -52,7 +52,7 @@
 			</div>
 			<div class="col-12 col-xl-6 p-2 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
 				<div class="mb-2">
-					<h2 class="h-mod">ACERCA DEL COLOSO</h2>
+					<h1 class="titulos">ACERCA DEL COLOSO</h1>
 					<p class="h5">En 1949, a través de una orden secreta, Evita crea el Grupo de Investigación Operativa, una organización científica cuya misión es dotar al gobierno de Perón de un arma definitiva para defenderse de las amenazas cada vez más violentas de parte de las Fuerzas Armadas y de la oposición. El 16 de junio de 1955, un gólem de treinta metros de puro acero quinquenal tendrá su bautismo de fuego en plena Plaza de Mayo, al enfrentar el intento de golpe de Estado.</p>
 					<p class="h5">Con esta batalla épica comienza El Coloso Justicialista, una novela por escenas en la que Juan Ruocco convierte a la Argentina peronista en una potencia espacial. Montado sobre una línea de tiempo alternativa y milenaria, el Imperio Justicialista intentará desarrollar toda la potencia de su proyecto sideral y popular.</p>
 				</div>
@@ -63,7 +63,7 @@
 				</div>
 				<div class="container principal principal-mod p-3 mb-3">
 					<div class="row">
-						<h5 class="d-flex justify-content-center h-mod">Acerca del Autor</h5>
+						<h2 class="d-flex justify-content-center subtitulos">Acerca del Autor</h2>
 					</div>
 						<div class="row">
 							<div class="col-12 col-xl-6 p-1 mb-3 d-flex align-content-center align-content-lg-stretch">
