cambios para la tercera entrega

--- a/convocatoria.html
+++ b/convocatoria.html
@@ -47,7 +47,8 @@
 		<div class="row">
 			<div class="col-12 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
 				<h1 class="titulos mb-3">¡Estamos buscando nuevos autores!</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+				<p>Ediciones El Panda abre la convocatoria de obras inéditas! Si tenés una novela escrita originalmente en español (no publicada en formato libro papel o libro electrónico, Internet, ni parcialmente en revistas), podés mandarla a contacto@edicioneselpanda.com.ar o cargarla en el formulario de contacto de esta pagina.</p>
+				<p>Buscamos autores jovenes que esten dando sus primeros pasos en el mundo de la literatura y que tengan historias orignales para contar, de aventuras, de misterio, de terror o ciencia ficción.</p>
 			</div>
 		</div>
 	</div>
@@ -62,13 +63,13 @@
 					<h2 class="titulos mb-3 pt-3">Bases y Condiciones:</h2>
 					<ul>
  					<li>
- 						<div class="subtitulos">Articulo 1:</div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+ 						<div class="subtitulos">Articulo 1:</div>Categoría convocada: Narrativa – Novela. Podrán participar todos los autores mayores de 18 años nacidos en Argentina. Solo es condición que la obra esté escrita originalmente en español y sea inédita. 
  					</li>
  					<li>
- 						<div class="subtitulos">Articulo 2:</div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+ 						<div class="subtitulos">Articulo 2:</div>Las obras deberán tener una extensión variable entre un mínimo de 15.000 palabras y un máximo de 70.000 palabras.
  					</li>
  					<li>
- 						<div class="subtitulos">Articulo 3:</div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+ 						<div class="subtitulos">Articulo 3:</div>No habrá justificación ni devolución de las obras no seleccionadas. El resultado de la convocatoria será anunciado durante el año 2022 en las redes sociales de la editorial: Twitter, Facebook e Instagram. La obra/s seleccionada/s será/n publicada/s por Ediciones El Panda, siempre que se tenga la conformidad del ganador/es.
  					</li>
  				</ul>
 				</div>
@@ -97,6 +98,9 @@
         	  			<button class="col-12 principal">Enviar</button>
 						</div>  
 					</form>
+									<div class="d-flex justify-content-center mb-2">
+					<img src="fotos/book.svg" class="icons" alt="icono libro" >
+				</div> 
 				</div>
 			</div>
 		</div>	
