--- a/comprar.html
+++ b/comprar.html
@@ -4,6 +4,7 @@
 	<title>Compra El Coloso</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Compra El Coloso Justicialista y podes retirarlo o te lo enviamos a tu casa.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="icon" href="fotos/avatar.png">
@@ -52,7 +53,11 @@
 			<div class="col-12 col-xl-6 p-3 mb-3 d-flex flex-wrap align-content-center align-content-xl-start">
 				<div class="mb-2">
 					<h1 class="titulos">Como Comprar este libro</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Hace click debajo y completa el formulario según corresponda.</p>
+					<p>El precio del libro es $1.500. Podes abonar a traves de Mercado Pago o por transferencia bancaria.</p>
+					<p>En Ediciones El Panda creemos en federalizar la cultra, por eso establecimos un solo precio de envio, $400, para todo el pais.</p>
+					<p>¡Solo completa con tus datos y nosotros nos encargamos el resto!</p>
+					<p>Te va a llegar un mail con la confirmación de compra y los datos para que puedas acercarte a retirar el libro. Si elegiste con envío al momento de despacharlo te mandamos el tracking del correo.</p>
 				</div>
 
 				<!-- offcanvas fuera -->
