--- a/comprar.html
+++ b/comprar.html
@@ -64,10 +64,10 @@
 				<div class="row col-12 p-3 d-flex align-content-start mb-1">
 					<div class="col-12 col-sm-6 d-flex flex-wrap justify-content-center justify-content-sm-start mb-1">
 						<a class="btn btn-outline-success btn-comprar"data-bs-toggle="offcanvas" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-						Con Envio</a>
+						Compra con envio</a>
 					</div>
 					<div class="col-12 col-sm-6 d-flex flex-wrap justify-content-center justify-content-sm-start mb-1">
-						<a class="btn btn-outline-success btn-comprar"data-bs-toggle="offcanvas" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight-retiro" aria-controls="offcanvasRight">Con Retiro</a>
+						<a class="btn btn-outline-success btn-comprar"data-bs-toggle="offcanvas" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight-retiro" aria-controls="offcanvasRight">Compra y retira</a>
 					</div>
 				</div>
 
