mejoras en comprar

--- a/convocatoria.html
+++ b/convocatoria.html
@@ -47,7 +47,7 @@
 		<div class="row">
 			<div class="col-12 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
 				<h1 class="titulos mb-3">¡Estamos buscando nuevos autores!</h1>
-				<p>Ediciones El Panda abre la convocatoria de obras inéditas! Si tenés una novela escrita originalmente en español (no publicada en formato libro papel o libro electrónico, Internet, ni parcialmente en revistas), podés mandarla a contacto@edicioneselpanda.com.ar o cargarla en el formulario de contacto de esta pagina.</p>
+				<p>¡Ediciones El Panda abre la convocatoria de obras inéditas! Si tenés una novela escrita originalmente en español (no publicada en formato libro papel o libro electrónico, Internet, ni parcialmente en revistas), podés mandarla a contacto@edicioneselpanda.com.ar o cargarla en el formulario de contacto de esta pagina.</p>
 				<p>Buscamos autores jovenes que esten dando sus primeros pasos en el mundo de la literatura y que tengan historias orignales para contar, de aventuras, de misterio, de terror o ciencia ficción.</p>
 			</div>
 		</div>
@@ -62,20 +62,23 @@
 				<div class="container principal">
 					<h2 class="titulos mb-3 pt-3">Bases y Condiciones:</h2>
 					<ul>
- 					<li>
- 						<div class="subtitulos">Articulo 1:</div>Categoría convocada: Narrativa – Novela. Podrán participar todos los autores mayores de 18 años nacidos en Argentina. Solo es condición que la obra esté escrita originalmente en español y sea inédita. 
- 					</li>
- 					<li>
- 						<div class="subtitulos">Articulo 2:</div>Las obras deberán tener una extensión variable entre un mínimo de 15.000 palabras y un máximo de 70.000 palabras.
- 					</li>
- 					<li>
- 						<div class="subtitulos">Articulo 3:</div>No habrá justificación ni devolución de las obras no seleccionadas. El resultado de la convocatoria será anunciado durante el año 2022 en las redes sociales de la editorial: Twitter, Facebook e Instagram. La obra/s seleccionada/s será/n publicada/s por Ediciones El Panda, siempre que se tenga la conformidad del ganador/es.
- 					</li>
- 				</ul>
+	 					<li>
+	 						<div class="subtitulos">Articulo 1:</div>
+	 						<p>Categoría convocada: Narrativa – Novela. Podrán participar todos los autores mayores de 18 años nacidos en Argentina. Solo es condición que la obra esté escrita originalmente en español y sea inédita.</p> 
+	 					</li>
+	 					<li>
+	 						<div class="subtitulos">Articulo 2:</div>
+	 						<p>Las obras deberán tener una extensión variable entre un mínimo de 15.000 palabras y un máximo de 70.000 palabras.</p>
+	 					</li>
+	 					<li>
+	 						<div class="subtitulos">Articulo 3:</div>
+	 						<p>No habrá justificación ni devolución de las obras no seleccionadas. El resultado de la convocatoria será anunciado durante el año 2022 en las redes sociales de la editorial: Twitter, Facebook e Instagram. La obra/s seleccionada/s será/n publicada/s por Ediciones El Panda, siempre que se tenga la conformidad del ganador/es.</p>
+	 					</li>
+ 					</ul>
 				</div>
 			</div>	
 			<div class="col-12 col-md-6 mb-3 d-flex align-content-stretch">
-				<div class="container principal ">
+				<div class="container principal">
 					<form action='formulario.html' method='POST' enctype="multipart/form-data">
 						<div class="titulos mb-3 p-1 pt-3">¡Envianos tu novela!
 						</div>
@@ -94,13 +97,13 @@
         				<div class='row mb-3'>
         					<input type="file" name="novela">
         				</div>
-        				<div class='row mb-3'>
+        				<div class='row mb-5'>
         	  			<button class="col-12 principal">Enviar</button>
 						</div>  
 					</form>
-									<div class="d-flex justify-content-center mb-2">
+					<div class="d-flex justify-content-center">
 					<img src="fotos/book.svg" class="icons" alt="icono libro" >
-				</div> 
+					</div> 
 				</div>
 			</div>
 		</div>	
