--- a/comprar.html
+++ b/comprar.html
@@ -61,13 +61,15 @@
 				</div>
 
 				<!-- offcanvas fuera -->
-				<div class="row col-12 p-3 d-flex align-content-start mb-1">
-					<div class="col-12 col-sm-6 d-flex flex-wrap justify-content-center justify-content-sm-start mb-1">
+				<div class="row col-12 p-2 d-flex align-content-start mb-1">
+					<div class="d-flex flex-wrap justify-content-center justify-content-sm-start mb-1">
 						<a class="btn btn-outline-success btn-comprar"data-bs-toggle="offcanvas" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-						Compra con envio</a>
+						Comprá con envío</a>
 					</div>
-					<div class="col-12 col-sm-6 d-flex flex-wrap justify-content-center justify-content-sm-start mb-1">
-						<a class="btn btn-outline-success btn-comprar"data-bs-toggle="offcanvas" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight-retiro" aria-controls="offcanvasRight">Compra y retira</a>
+				</div>
+				<div class="row col-12 p-2 d-flex align-content-start mb-1">		
+					<div class="d-flex flex-wrap justify-content-center justify-content-sm-start mb-1">
+						<a class="btn btn-outline-success btn-comprar"data-bs-toggle="offcanvas" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight-retiro" aria-controls="offcanvasRight">Comprá y retirá</a>
 					</div>
 				</div>
 
@@ -76,8 +78,17 @@
 				<div class="principal principal-mod mb-2 p-3	">
 					<p class="subtitulos">Puntos de Retiro</p>
 					<p>En CABA podes coordinar para retirar por:</p>
-					<p>	Montserrat y San Nicolás.</p>
-					<p> Para pagos a través de transferencias bancarias enviar mail a <a class="mail" href="mailto:contacto@edicioneselpanda.com.ar">contacto@edicioneselpanda.com.ar</a>
+					<ul>
+						<li>
+							<p>Montserrat</p>
+						</li>
+						<li>
+							<p>San Nicolás</p>
+						</li>
+					</ul>
+					<p> Para pagos por transferencias bancarias enviar un mail a: 
+						<a class="mail" href="mailto:contacto@edicioneselpanda.com.ar">contacto@edicioneselpanda.com.ar</a> 
+					</p>	
 				</div>
 			</div>
 		</div>
