margen form convocatoria

--- a/convocatoria.html
+++ b/convocatoria.html
@@ -97,11 +97,11 @@
         				<div class='row mb-3'>
         					<input type="file" name="novela">
         				</div>
-        				<div class='row mb-5'>
+        				<div class='row mb-2 mb-md-5'>
         	  			<button class="col-12 principal">Enviar</button>
 						</div>  
 					</form>
-					<div class="d-flex justify-content-center">
+					<div class="d-flex justify-content-center mb-2">
 					<img src="fotos/book.svg" class="icons" alt="icono libro" >
 					</div> 
 				</div>
