--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -43,113 +43,112 @@
 	</div>
 	<!-- /Header -->
 
-
-
 	<!-- Quienes Somos -->
-		<div class="container principal p-3 mb-3">
-			<div class="row">
-				<div class="col-12 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
-					<h1 class="titulos mb-3">Conocenos un poco más</h1>
-					<p>Ediciones El Panda nació de un tweet en plena pandemia. El inquieto y prolífico Juan Ruocco contaba que tenía en desarrollo una novela sobre robots y peronismo, y que buscaba editor para publicarla.</p> 
-		 			<p>Como esas cosas que surgen en charlas de amigos y grupos de whatsapp, alguien tiró la novedad, un par hicieron chistes y uno, Ariel, “El Panda”, recogió el guante: «¿cuánto sale editarlo?».</p>
-		 			<p>Lo que empezó como otras miles de ideas tiradas al aire fue tomando forma, tuvo avances y retrocesos, números que no cerraban y estimaciones poco realistas. Pero, de golpe, la pandemia se hizo carne y se llevó a quien dio la patada inicial de este proyecto. Luego del trance, la tristeza y aún sin poder abrazarnos, el proyecto editorial se hizo más fuerte, más necesario y concreto, y decidió llamarse, por supuesto, Ediciones El Panda.</p>
-		 			<p>Su primer libro es El Coloso Justicialista, una novela que comienza con una ucronía en 1949 y a partir de allí propone un relato de ciencia ficción que recorre la historia argentina, mezclando doctrina peronista, peleas de robots gigantes de “acero quinquenal” y conquista del espacio. Se trata de un clásico relato de aventuras que invita al lector a sumergirse en una historia tan inverosímil como atrapante.</p>
-		 			<p>Semejante propuesta no estaba completa sin un ilustrador que comprendiera el alma de este desafío. Y así se sumó CJ Camba, quien logró plasmar en el coloso de la tapa el espíritu de época, la fantasía de la novela y el diseño de la industria nacional del primer peronismo.</p>
-		 			<p>Desde Ediciones El Panda quisimos concretar un sueño de amigos. Ahora que lo logramos, pretendemos ir un poco más allá. Somos una editorial que busca ampliar el universo de la literatura argentina de acción y de aventuras, a partir de una propuesta asociativa que coloca a los autores en pie de igualdad con los editores. Con esta premisa, y con la alegría de presentarnos en sociedad, los invitamos a leer y disfrutar El Coloso Justicialista.</p>
-				</div>
+	<div class="container principal p-3 mb-3">
+		<div class="row">
+			<div class="col-12 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
+				<h1 class="titulos mb-3">Conocenos un poco más</h1>
+				<p>Ediciones El Panda nació de un tweet en plena pandemia. El inquieto y prolífico Juan Ruocco contaba que tenía en desarrollo una novela sobre robots y peronismo, y que buscaba editor para publicarla.</p> 
+		 		<p>Como esas cosas que surgen en charlas de amigos y grupos de whatsapp, alguien tiró la novedad, un par hicieron chistes y uno, Ariel, “El Panda”, recogió el guante: «¿cuánto sale editarlo?».</p>
+		 		<p>Lo que empezó como otras miles de ideas tiradas al aire fue tomando forma, tuvo avances y retrocesos, números que no cerraban y estimaciones poco realistas. Pero, de golpe, la pandemia se hizo carne y se llevó a quien dio la patada inicial de este proyecto. Luego del trance, la tristeza y aún sin poder abrazarnos, el proyecto editorial se hizo más fuerte, más necesario y concreto, y decidió llamarse, por supuesto, Ediciones El Panda.</p>
+		 		<p>Su primer libro es El Coloso Justicialista, una novela que comienza con una ucronía en 1949 y a partir de allí propone un relato de ciencia ficción que recorre la historia argentina, mezclando doctrina peronista, peleas de robots gigantes de “acero quinquenal” y conquista del espacio. Se trata de un clásico relato de aventuras que invita al lector a sumergirse en una historia tan inverosímil como atrapante.</p>
+		 		<p>Semejante propuesta no estaba completa sin un ilustrador que comprendiera el alma de este desafío. Y así se sumó CJ Camba, quien logró plasmar en el coloso de la tapa el espíritu de época, la fantasía de la novela y el diseño de la industria nacional del primer peronismo.</p>
+		 		<p>Desde Ediciones El Panda quisimos concretar un sueño de amigos. Ahora que lo logramos, pretendemos ir un poco más allá. Somos una editorial que busca ampliar el universo de la literatura argentina de acción y de aventuras, a partir de una propuesta asociativa que coloca a los autores en pie de igualdad con los editores. Con esta premisa, y con la alegría de presentarnos en sociedad, los invitamos a leer y disfrutar El Coloso Justicialista.</p>
 			</div>
 		</div>
+	</div>
 
 	<!-- /Quienes Somos -->
 	
 	<!-- Galeria -->
 	
-					<div class="container principal mb-3 pt-2 pb-2">
-						<div class="row mb-3">
-							<h1 class="d-flex justify-content-center titulos ">Reviví la presentación</h1>
-						</div> 
-						<div class="row"> 
-				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion1" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_libro.jpg" alt="tapa del libro"></a>
-				  			</div>
-				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion2" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editorial.jpg" alt="grupo de gente"></a>
-				  			</div>
-				  			<div class="col-12 col-lg-4 mb-3">
-				   			 	<a href="#Presentacion3" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani"></a>
-				 			 </div>
-				 		</div>
-				 		<div class="row"> 
-				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion4" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editores.jpg" alt="Presentacion de la editorial"></a>
-				  			</div>
-				  			<div class="col-12 col-lg-4 mb-3">
-				    			<a href="#Presentacion5" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_autor.jpg" alt="charla del autor"></a>
-				  			</div>
-				  			<div class="col-12 col-lg-4 mb-3">
-				   			 	<a href="#Presentacion6" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_firma.jpg" alt="autor firmando libros"></a>
-				 			 </div>
-				 		</div>
-					</div>
-			
-				
+	<div class="container principal mb-3 pt-2 pb-2">
+		<div class="row mb-3">
+				<h1 class="d-flex justify-content-center titulos ">Reviví la presentación</h1>
+		</div> 
+		<div class="row"> 
+			<div class="col-12 col-lg-4 mb-3">
+				<a href="#Presentacion1" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_libro.jpg" alt="tapa del libro">
+				</a>
+			</div>
+			<div class="col-12 col-lg-4 mb-3">
+				<a href="#Presentacion2" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">
+				</a>
+			</div>
+			<div class="col-12 col-lg-4 mb-3">
+				<a href="#Presentacion3" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">
+				</a>
+			</div>
+		</div>
+		<div class="row"> 
+			<div class="col-12 col-lg-4 mb-3">
+				<a href="#Presentacion4" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editores.jpg" alt="Presentacion de la editorial">
+				 </a>
+			</div>
+			<div class="col-12 col-lg-4 mb-3">
+				<a href="#Presentacion5" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_autor.jpg" alt="charla del autor">
+				</a>
+			</div>
+			<div class="col-12 col-lg-4 mb-3">
+				 <a href="#Presentacion6" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_firma.jpg" alt="autor firmando libros">
+				 </a>
+			</div>
+		</div>
+	</div>				
 		
-		<!-- Modal dentro -->
+	<!-- Modal dentro -->
 
-	    <div id="Presentacion1" class="modal modal-zoom" tabindex="-1">
-	        <div class="modal-dialog">
-	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion_libro.jpg" alt="tapa del libro">	            
-	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
-	            </div>
+	<div id="Presentacion1" class="modal modal-zoom" tabindex="-1">
+	    <div class="modal-dialog">
+	        <div class="modal-content modal-content-pos">
+	           	<img class="img-fluid" src="fotos/presentacion_libro.jpg" alt="tapa del libro">	            
+	            <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
-    	</div>
-	    <div id="Presentacion2" class="modal modal-zoom" tabindex="-1">
-	        <div class="modal-dialog">
-	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">	            
-	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
-	         	</div>
+	    </div>
+    </div>
+	<div id="Presentacion2" class="modal modal-zoom" tabindex="-1">
+	    <div class="modal-dialog">
+	       	<div class="modal-content modal-content-pos">
+	           	<img class="img-fluid" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">	            
+	            <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
-    	</div>
-    	<div id="Presentacion3" class="modal modal-zoom" tabindex="-1">
-	        <div class="modal-dialog">
-	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">      
-	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
-	         	</div>
+	    </div>
+    </div>
+    <div id="Presentacion3" class="modal modal-zoom" tabindex="-1">
+	    <div class="modal-dialog">
+	        <div class="modal-content modal-content-pos">
+	            <img class="img-fluid" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">      
+	            <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
-    	</div>
-    	<div id="Presentacion4" class="modal modal-zoom" tabindex="-1">
-	        <div class="modal-dialog">
-	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion_editores.jpg" alt="presentacion de la editorial">        
-	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
-	         	</div>
+	    </div>
+    </div>
+    <div id="Presentacion4" class="modal modal-zoom" tabindex="-1">
+	    <div class="modal-dialog">
+	        <div class="modal-content modal-content-pos">
+	            <img class="img-fluid" src="fotos/presentacion_editores.jpg" alt="presentacion de la editorial">        
+	            <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
-    	</div> 
-    	<div id="Presentacion5" class="modal modal-zoom" tabindex="-1">
-	        <div class="modal-dialog">
-	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion_autor.jpg" alt="charla del autor">	            
-	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
-	         	</div>
+	    </div>
+    </div> 
+    <div id="Presentacion5" class="modal modal-zoom" tabindex="-1">
+	    <div class="modal-dialog">
+	        <div class="modal-content modal-content-pos">
+	           	<img class="img-fluid" src="fotos/presentacion_autor.jpg" alt="charla del autor">           
+	            <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
-    	</div> 
-    	<div id="Presentacion6" class="modal modal-zoom" tabindex="-1">
-	        <div class="modal-dialog">
-	            <div class="modal-content modal-content-pos">
-	            	<img class="img-fluid" src="fotos/presentacion_firma.jpg" alt="autor firmando libros">	            
-	                <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
-	         	</div>
+	    </div>
+    </div> 
+    <div id="Presentacion6" class="modal modal-zoom" tabindex="-1">
+	    <div class="modal-dialog">
+	        <div class="modal-content modal-content-pos">
+	        	<img class="img-fluid" src="fotos/presentacion_firma.jpg" alt="autor firmando libros">
+	        	<button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
-    	</div>     	    	    	 
-    	<!-- /Modal dentro -->    
-
-
+	    </div>
+    </div>     	    	    	 
+  	<!-- /Modal dentro -->    
 
    <!-- /Galeria --> 	
-
 
 	<!-- Footer -->
 	<div class="container principal d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
