--- a/comprar.html
+++ b/comprar.html
@@ -116,138 +116,132 @@
 	<!-- /Footer -->
 
 	<!-- offcanvas dentro con envio-->
-						<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-	  						<div class="offcanvas-header">
-	   					 		<h2 id="offcanvasRightLabel" class="titulos">Completa el formulario</h2>
-	    					<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-	  						</div>
-	  						<div class="offcanvas-body">
-				   				<div class="col-12 mb-3 ">
-									<div class="container">
-										<form action='formulario.html' method='POST' enctype="multipart/form-data">
-											<div class="titulos mb-3 p-1">Compra y envío
-											</div>
-											<div class='row col-sm-12 mb-1'>
-				        						<label class="form-label col-12 col-lg-4" for='nombre'>Nombre:</label>
-				        						<input class="col-12 col-lg-8" id='nombre' name='full-name' type='text'/>
-				        					</div>
-				        					<div class='row col-sm-12 mb-1'>
-				        						<label class="form-label col-12 col-lg-3" for='mail'>E-Mail:</label>
-				        						<input class="col-12 col-lg-9" id='mail' name='mail' type='email' placeholder="hola@ejemplo.com" />
-				        					</div>	
-											<div class='row col-sm-12 mb-1'>
-				        						<label class="form-label col-12 col-lg-4" for='telefono'>Teléfono:</label>
-				        						<input class="col-12 col-lg-8" id='telefono' name='telefono' type='text'/>
-				        					</div>   				        			
-				        						<div class="row mb-1">
-				        							<label class="form-label col-12 col-lg-3" for='provincia'>Provincia:</label>
-					        						<select id="provincia" class="form-select" aria-label="Default select example">
-	  													<option selected>Selecciona la provincia</option>
-	  													<option value="1">Buenos Aires</option>
-	  													<option value="2">CABA</option>
-	  													<option value="3">Catamarca</option>
-	  													<option value="4">Chaco</option>
-	  													<option value="5">Chubut</option>
-	  													<option value="6">Cordoba</option>
-	  													<option value="7">Corrientes</option>
-	  													<option value="8">Entre Rios</option>
-	  													<option value="9">Formosa</option>
-	  													<option value="10">Jujuy</option>
-	  													<option value="11">La Pampa</option>
-	  													<option value="12">La Rioja</option>
-	  													<option value="13">Mendoza</option>
-	  													<option value="14">Misiones</option>
-	  													<option value="15">Neuquén</option>
-	  													<option value="16">Rio Negro</option>
-	  													<option value="17">Salta</option>
-	  													<option value="18">San Juan</option>
-	  													<option value="19">San Luis</option>
-	  													<option value="20">Santa Cruz</option>
-	  													<option value="21">Santa Fe</option>
-	  													<option value="22">Santiago Del Estero</option>
-	  													<option value="23">Tierra del Fuego</option>
-	  													<option value="24">Tucuman</option>
-													</select>
-												</div>
-											<div class='row mb-1'>
-				        						<label class="form-label col-12 col-lg-3" for='Calle'>Calle:</label>
-				        						<input class="col-12 col-lg-9" id='Calle' name='calle' type='text'/>
-				        					</div>
-				        					<div class='row mb-1'>
-				        						<label class="form-label col-12 col-lg-3" for='numero'>Numero:</label>
-				        						<input class="col-12 col-lg-9" id='numero' name='numero' type='number'/>
-				        					</div>
-				        					<div class='row mb-1'>
-				        						<label class="form-label col-12 col-lg-5" for='cp'>Codigo Postal:</label>
-				        						<input class="col-12 col-lg-7" id='cp' name='cp' type='number'/>
-				        					</div>	
-											<div class='row mb-1'>
-				        						<label class="form-label col-12 col-lg-5" for='depto'>Departamento:</label>
-				        						<input class="col-12 col-lg-7" id='depto' name='depto' type='text'/>
-				        					</div>				        								        				
-				        					<div class='row mb-3'>
-				        	  					<button class="col-12">Enviar</button>
-											</div>  
-										</form>
-									</div>
-								</div>
-	  						</div>
+	<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+	  	<div class="offcanvas-header">
+	   		<h1 id="offcanvasRightLabel" class="titulos">Completa el formulario</h1>
+	    		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	  	</div>
+	  	<div class="offcanvas-body">
+			<div class="col-12 mb-3 ">
+				<div class="container">
+					<form action='formulario.html' method='POST' enctype="multipart/form-data">
+						<div class="titulos mb-3 p-1">Compra y envío
 						</div>
+						<div class='row col-sm-12 mb-1'>
+				        	<label class="form-label col-12 col-lg-4" for='nombre'>Nombre:</label>
+				        	<input class="col-12 col-lg-8" id='nombre' name='full-name' type='text'/>
+				        </div>
+				        <div class='row col-sm-12 mb-1'>
+				        	<label class="form-label col-12 col-lg-3" for='mail'>E-Mail:</label>
+				        	<input class="col-12 col-lg-9" id='mail' name='mail' type='email' placeholder="hola@ejemplo.com" />
+				        	</div>	
+						<div class='row col-sm-12 mb-1'>
+				        	<label class="form-label col-12 col-lg-4" for='telefono'>Teléfono:</label>
+				        	<input class="col-12 col-lg-8" id='telefono' name='telefono' type='text'/>
+				        </div>   				        			
+				        <div class="row mb-1">
+				        	<label class="form-label col-12 col-lg-3" for='provincia'>Provincia:</label>
+					        <select id="provincia" class="form-select" aria-label="Default select example">
+	  							<option selected>Selecciona la provincia</option>
+	  							<option value="1">Buenos Aires</option>
+	  							<option value="2">CABA</option>
+	  							<option value="3">Catamarca</option>
+	  							<option value="4">Chaco</option>
+	  							<option value="5">Chubut</option>
+	  							<option value="6">Cordoba</option>
+	  							<option value="7">Corrientes</option>
+	  							<option value="8">Entre Rios</option>
+	  							<option value="9">Formosa</option>
+	  							<option value="10">Jujuy</option>
+	  							<option value="11">La Pampa</option>
+	  							<option value="12">La Rioja</option>
+	  							<option value="13">Mendoza</option>
+	  							<option value="14">Misiones</option>
+	  							<option value="15">Neuquén</option>
+	  							<option value="16">Rio Negro</option>
+	  							<option value="17">Salta</option>
+	  							<option value="18">San Juan</option>
+	  							<option value="19">San Luis</option>
+	  							<option value="20">Santa Cruz</option>
+	  							<option value="21">Santa Fe</option>
+	  							<option value="22">Santiago Del Estero</option>
+	  							<option value="23">Tierra del Fuego</option>
+	  							<option value="24">Tucuman</option>
+							</select>
+						</div>
+						<div class='row mb-1'>
+				        	<label class="form-label col-12 col-lg-3" for='Calle'>Calle:</label>
+				        	<input class="col-12 col-lg-9" id='Calle' name='calle' type='text'/>
+				        </div>
+				        <div class='row mb-1'>
+				        	<label class="form-label col-12 col-lg-3" for='numero'>Numero:</label>
+				        	<input class="col-12 col-lg-9" id='numero' name='numero' type='number'/>
+				        </div>
+				        <div class='row mb-1'>
+				        	<label class="form-label col-12 col-lg-5" for='cp'>Codigo Postal:</label>
+				        	<input class="col-12 col-lg-7" id='cp' name='cp' type='number'/>
+				        </div>	
+						<div class='row mb-1'>
+				        	<label class="form-label col-12 col-lg-5" for='depto'>Departamento:</label>
+				        	<input class="col-12 col-lg-7" id='depto' name='depto' type='text'/>
+				        </div>				        								        				
+				        <div class='row mb-3'>
+				        	<button class="col-12">Enviar</button>
+						</div>  
+					</form>
+				</div>
+			</div>
+	  	</div>
+	</div>
 	<!-- /offcanvas dentro con envio -->
 	<!-- offcanvas dentro con retiro-->
-						<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight-retiro" aria-labelledby="offcanvasRightLabel">
-	  						<div class="offcanvas-header">
-	   					 		<h2 id="offcanvasRightLabel" class="titulos">Completa el formulario</h2>
-	    					<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-	  						</div>
-	  						<div class="offcanvas-body">
-				   				<div class="col-12 mb-3 ">
-									<div class="container">
-										<form action='formulario.html' method='POST' enctype="multipart/form-data">
-											<div class="titulos mb-3 p-1">¡Compra y retira!
-											</div>
-											<div class='row col-sm-12 mb-1'>
-				        						<label class="form-label col-12 col-lg-4" for='nombre'>Nombre:</label>
-				        						<input class="col-12 col-lg-8" id='nombre' name='full-name' type='text'/>
-				        					</div>
-				        					<div class='row mb-1'>
-				        						<label class="form-label col-12 col-lg-3" for='mail'>E-Mail:</label>
-				        						<input class="col-12 col-lg-9" id='mail' name='mail' type='email' placeholder="hola@ejemplo.com" />
-				        					</div>
-											<div class='row col-sm-12 mb-1'>
-				        						<label class="form-label col-12 col-lg-4" for='telefono'>Teléfono:</label>
-				        						<input class="col-12 col-lg-8" id='telefono' name='telefono' type='text'/>
-				        					</div>
-				        					<div class='row col-sm-12 mb-1'>
-				        						Punto de Retiro:
-				        					</div>
-				        					<div class='row col-sm-12 mb-1'>
-												<div class="form-check">
-												  <label class="form-check-label" for="flexRadioDefault1">
-												    Montserrat
-												  </label>
-												  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-												</div>
-											</div>	
-				        					<div class='row col-sm-12 mb-1'>				<div class="form-check">
-												  <label class="form-check-label" for="flexRadioDefault2">
-												    San Nicolas
-												  </label>
-												  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>		  
-												</div>
-											</div>
-				        					<div class='row mb-3'>
-				        	  					<button class="col-12">Enviar</button>
-											</div>  
-										</form>
-									</div>
-								</div>
-	  						</div>
+	<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight-retiro" aria-labelledby="offcanvasRightLabel">
+	  	<div class="offcanvas-header">
+	   		<h1 id="offcanvasRightLabel" class="titulos">Completa el formulario</h1>
+	    	<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	  	</div>
+	  	<div class="offcanvas-body">
+			<div class="col-12 mb-3 ">
+				<div class="container">
+					<form action='formulario.html' method='POST' enctype="multipart/form-data">
+						<div class="titulos mb-3 p-1">¡Compra y retira!
 						</div>
+						<div class='row col-sm-12 mb-1'>
+				        	<label class="form-label col-12 col-lg-4" for='nombre'>Nombre:</label>
+				        	<input class="col-12 col-lg-8" id='nombre' name='full-name' type='text'/>
+				        </div>
+				        <div class='row mb-1'>
+				        	<label class="form-label col-12 col-lg-3" for='mail'>E-Mail:</label>
+				        	<input class="col-12 col-lg-9" id='mail' name='mail' type='email' placeholder="hola@ejemplo.com" />
+				        </div>
+						<div class='row col-sm-12 mb-1'>
+				        	<label class="form-label col-12 col-lg-4" for='telefono'>Teléfono:</label>
+				        	<input class="col-12 col-lg-8" id='telefono' name='telefono' type='text'/>
+				        </div>
+				        <div class='row col-sm-12 mb-1'>Punto de Retiro:
+				        </div>
+				        <div class='row col-sm-12 mb-1'>
+							<div class="form-check">
+								<label class="form-check-label" for="flexRadioDefault1">Montserrat</label>
+								<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							</div>
+						</div>	
+				        <div class='row col-sm-12 mb-1'>
+				        	<div class="form-check">
+								<label class="form-check-label" for="flexRadioDefault2">San Nicolas</label>
+								<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>		  
+							</div>
+						</div>
+				        <div class='row mb-3'>
+				        	<button class="col-12">Enviar</button>
+						</div>  
+					</form>
+				</div>
+			</div>
+	  	</div>
+	</div>
 	<!-- /offcanvas dentro con retiro -->
-
-
-
+	
  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
