--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -25,16 +25,16 @@
 			          		<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 			          	</li>
 			          	<li class="nav-item">
-			          		<a class="nav-link" href="libros.html#">Libros</a>
+			          		<a class="nav-link" href="libros.html">Libros</a>
 			          	</li>	       		    	
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="comprar.html#">Comprar</a>
+			          		<a class="nav-link" href="comprar.html">Comprar</a>
 			          	</li>
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="quienes_somos.html#">Quienes Somos</a>
+			          		<a class="nav-link" href="quienes_somos.html">Quienes Somos</a>
 			          	</li>
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="convocatoria.html#">Nuevos Autores</a>
+			          		<a class="nav-link" href="convocatoria.html">Nuevos Autores</a>
 			        	</li>
 		      		</ul>
 		 	    </div>
