--- a/comprar.html
+++ b/comprar.html
@@ -24,16 +24,16 @@
 			          		<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 			          	</li>
 			          	<li class="nav-item">
-			          		<a class="nav-link" href="libros.html#">Libros</a>
+			          		<a class="nav-link" href="libros.html">Libros</a>
 			          	</li>	       		    	
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="comprar.html#">Comprar</a>
+			          		<a class="nav-link" href="comprar.html">Comprar</a>
 			          	</li>
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="quienes_somos.html#">Quienes Somos</a>
+			          		<a class="nav-link" href="quienes_somos.html">Quienes Somos</a>
 			          	</li>
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="convocatoria.html#">Nuevos Autores</a>
+			          		<a class="nav-link" href="convocatoria.html">Nuevos Autores</a>
 			        	</li>
 		      		</ul>
 		 	    </div>
@@ -241,7 +241,7 @@
 	  	</div>
 	</div>
 	<!-- /offcanvas dentro con retiro -->
-	
+
  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
