--- a/libros.html
+++ b/libros.html
@@ -4,6 +4,7 @@
 	<title>Libros - Ediciones El Panda</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="El Coloso Justicialista, una novela por escenas en la que Juan Ruocco convierte a la Argentina peronista en una potencia espacial.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="icon" href="fotos/avatar.png">
@@ -23,16 +24,16 @@
 			          		<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 			          	</li>
 			          	<li class="nav-item">
-			          		<a class="nav-link" href="libros.html#">Libros</a>
+			          		<a class="nav-link" href="libros.html">Libros</a>
 			          	</li>	       		    	
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="comprar.html#">Comprar</a>
+			          		<a class="nav-link" href="comprar.html">Comprar</a>
 			          	</li>
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="quienes_somos.html#">Quienes Somos</a>
+			          		<a class="nav-link" href="quienes_somos.html">Quienes Somos</a>
 			          	</li>
 			          	<li class="nav-item">	
-			          		<a class="nav-link" href="convocatoria.html#">Nuevos Autores</a>
+			          		<a class="nav-link" href="convocatoria.html">Nuevos Autores</a>
 			        	</li>
 		      		</ul>
 		 	    </div>
