--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -41,6 +41,7 @@
 		  	</div>
 		</div>
 	</div>
+
 	<!-- /Header -->
 
 	<!-- Quienes Somos -->
@@ -60,44 +61,48 @@
 
 	<!-- /Quienes Somos -->
 	
-	<!-- Galeria -->
-	
+	<!-- Galeria -->	
 	<div class="container principal mb-3 pt-2 pb-2">
 		<div class="row mb-3">
-				<h1 class="d-flex justify-content-center titulos ">Reviví la presentación</h1>
+			<h1 class="d-flex justify-content-center titulos ">Reviví la presentación</h1>
 		</div> 
 		<div class="row"> 
 			<div class="col-12 col-lg-4 mb-3">
-				<a href="#Presentacion1" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_libro.jpg" alt="tapa del libro">
+				<a href="#Presentacion1" data-bs-toggle="modal">
+					<img class="img-fluid img-modal" src="fotos/presentacion_libro.jpg" alt="tapa del libro">
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 mb-3">
-				<a href="#Presentacion2" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">
+				<a href="#Presentacion2" data-bs-toggle="modal">
+					<img class="img-fluid img-modal" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 mb-3">
-				<a href="#Presentacion3" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">
+				<a href="#Presentacion3" data-bs-toggle="modal">
+					<img class="img-fluid img-modal" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">
 				</a>
 			</div>
 		</div>
 		<div class="row"> 
 			<div class="col-12 col-lg-4 mb-3">
-				<a href="#Presentacion4" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_editores.jpg" alt="Presentacion de la editorial">
+				<a href="#Presentacion4" data-bs-toggle="modal">
+					<img class="img-fluid img-modal" src="fotos/presentacion_editores.jpg" alt="Presentacion de la editorial">
 				 </a>
 			</div>
 			<div class="col-12 col-lg-4 mb-3">
-				<a href="#Presentacion5" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_autor.jpg" alt="charla del autor">
+				<a href="#Presentacion5" data-bs-toggle="modal">
+					<img class="img-fluid img-modal" src="fotos/presentacion_autor.jpg" alt="charla del autor">
 				</a>
 			</div>
 			<div class="col-12 col-lg-4 mb-3">
-				 <a href="#Presentacion6" data-bs-toggle="modal"><img class="img-fluid img-modal" src="fotos/presentacion_firma.jpg" alt="autor firmando libros">
+				 <a href="#Presentacion6" data-bs-toggle="modal">
+				 	<img class="img-fluid img-modal" src="fotos/presentacion_firma.jpg" alt="autor firmando libros">
 				 </a>
 			</div>
 		</div>
 	</div>				
 		
 	<!-- Modal dentro -->
-
 	<div id="Presentacion1" class="modal modal-zoom" tabindex="-1">
 	    <div class="modal-dialog">
 	        <div class="modal-content modal-content-pos">
@@ -109,7 +114,7 @@
 	<div id="Presentacion2" class="modal modal-zoom" tabindex="-1">
 	    <div class="modal-dialog">
 	       	<div class="modal-content modal-content-pos">
-	           	<img class="img-fluid" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">	            
+	           	<img class="img-fluid" src="fotos/presentacion_editorial.jpg" alt="grupo de gente">         
 	            <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
 	    </div>
@@ -117,7 +122,7 @@
     <div id="Presentacion3" class="modal modal-zoom" tabindex="-1">
 	    <div class="modal-dialog">
 	        <div class="modal-content modal-content-pos">
-	            <img class="img-fluid" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">      
+	            <img class="img-fluid" src="fotos/presentacion_concierto.jpg" alt="recital Leon Rogani">    
 	            <button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
 	    </div>
@@ -145,9 +150,9 @@
 	        	<button type="button" class="btn btn-secondary modal-close" data-bs-dismiss="modal">X</button>        
 	        </div>
 	    </div>
-    </div>     	    	    	 
-  	<!-- /Modal dentro -->    
+    </div>
 
+  	<!-- /Modal dentro -->
    <!-- /Galeria --> 	
 
 	<!-- Footer -->
