--- a/comprar.html
+++ b/comprar.html
@@ -40,6 +40,7 @@
 		  	</div>
 		</div>
 	</div>
+
 	<!-- /Header -->
 
 	<!-- Seccion -->
@@ -75,7 +76,7 @@
 
 				<!-- /offcanvas -->
 																	
-				<div class="principal principal-mod mb-2 p-3	">
+				<div class="principal principal-mod mb-2 p-3">
 					<p class="subtitulos">Puntos de Retiro</p>
 					<p>En CABA podes coordinar para retirar por:</p>
 					<ul>
@@ -93,6 +94,7 @@
 			</div>
 		</div>
 	</div>
+
 	<!-- /Seccion -->
 
 	<!-- Footer -->
@@ -186,14 +188,34 @@
 				        	<input class="col-12 col-lg-7" id='depto' name='depto' type='text'/>
 				        </div>				        								        				
 				        <div class='row mb-3'>
-				        	<button class="col-12">Enviar</button>
+				        	<button type="button" class="col-12" data-bs-toggle="modal" href="#formCompraEnvio">Enviar</button>
 						</div>  
 					</form>
 				</div>
 			</div>
 	  	</div>
 	</div>
+
+		<!-- Modal -->
+		<div class="modal fade" id="formCompraEnvio" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+		    	<div class="modal-content principal">
+		    		<div class="modal-body">
+		        		¡Gracias por tu compra! A la brevedad te enviaremos un mail con los datos del envio.
+		      		</div>
+		      		<div class="modal-footer d-flex justify-content-center">
+		        		<button type="button" class="btn btn-modal" data-bs-dismiss="modal">
+		        			Cerrar
+		        		</button>
+		       		</div>
+		    	</div>
+		  	</div>
+		</div>
+
+		<!-- /Modal -->	
+
 	<!-- /offcanvas dentro con envio -->
+
 	<!-- offcanvas dentro con retiro-->
 	<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight-retiro" aria-labelledby="offcanvasRightLabel">
 	  	<div class="offcanvas-header">
@@ -233,13 +255,32 @@
 							</div>
 						</div>
 				        <div class='row mb-3'>
-				        	<button class="col-12">Enviar</button>
+				        	<button type="button" class="col-12" data-bs-toggle="modal" href="#formCompraRetiro">Enviar</button>
 						</div>  
 					</form>
 				</div>
 			</div>
 	  	</div>
 	</div>
+
+		<!-- Modal -->
+		<div class="modal fade" id="formCompraRetiro" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+		    	<div class="modal-content principal">
+		    		<div class="modal-body">
+		        		¡Gracias por tu compra! A la brevedad te enviaremos un mail con los datos para que puedas retirar tu libro
+		      		</div>
+		      		<div class="modal-footer d-flex justify-content-center">
+		        		<button type="button" class="btn btn-modal" data-bs-dismiss="modal">
+		        			Cerrar
+		        		</button>
+		       		</div>
+		    	</div>
+		  	</div>
+		</div>
+
+		<!-- /Modal -->	
+	
 	<!-- /offcanvas dentro con retiro -->
 
  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
