--- a/convocatoria.html
+++ b/convocatoria.html
@@ -40,6 +40,7 @@
 		  	</div>
 		</div>
 	</div>
+
 	<!-- /Header -->
 
 	<!-- Bases y Condiciones -->
@@ -60,7 +61,7 @@
 		<div class="row">
 			<div class="col-12 col-md-6 mb-3 d-flex align-content-stretch">
 				<div class="container principal">
-					<h2 class="titulos mb-3 pt-3">Bases y Condiciones:</h2>
+					<h1 class="titulos mb-3 pt-3">Bases y Condiciones:</h1>
 					<ul>
 	 					<li>
 	 						<div class="subtitulos">Articulo 1:</div>
@@ -98,18 +99,36 @@
         					<input type="file" name="novela">
         				</div>
         				<div class='row mb-2 mb-md-5'>
-        	  			<button class="col-12 principal">Enviar</button>
+        	  			<button type="button" class="col-12 principal" data-bs-toggle="modal" href="#formConvocatoria">Enviar</button>
 						</div>  
 					</form>
 					<div class="d-flex justify-content-center mb-2">
-					<img src="fotos/book.svg" class="icons" alt="icono libro" >
+						<img src="fotos/book.svg" class="icons" alt="icono libro" >
 					</div> 
 				</div>
 			</div>
 		</div>	
 	</div>
 
-	<!-- /Seccion -->	
+	<!-- /Seccion -->
+
+	<!-- Modal -->
+	<div class="modal fade" id="formConvocatoria" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+	    	<div class="modal-content principal">
+	    		<div class="modal-body">
+	        		¡Gracias por enviarnos tu novela! Nos pondremos en contacto en el caso de que quede seleccionada.
+	      		</div>
+	      		<div class="modal-footer d-flex justify-content-center">
+	        		<button type="button" class="btn btn-modal" data-bs-dismiss="modal">
+	        			Cerrar
+	        		</button>
+	       		</div>
+	    	</div>
+	  	</div>
+	</div>
+
+	<!-- /Modal -->	
 
 	<!-- Footer -->
 	<div class="container principal d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
